Fix z-index issue on mobile

--- a/_sass/basil.scss
+++ b/_sass/basil.scss
@@ -261,7 +261,7 @@ input:checked ~ .trigger {
 }
 
 .site-nav {
-  z-index: 2;
+  z-index: 5;
 }
 
 .site-title {
